# light_programmer

./: .gitignore  CLAUDE.md  README.md  data.json  genconfig.py  matter_lib.py  programmer.py  pyproject.toml  sample.json  yeelight.json
.github/workflows/: python-publish.yml
light_programmer/: __init__.py  genconfig.py  matter_lib.py  mcp_server.py  mode_http.py  mode_state.py  programmer.py
