[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "light-programmer"
version = "0.5.0"
description = "Ecosystem-agnostic smart home lighting & AC automation using Matter protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
light-programmer = "light_programmer.programmer:main"
light-genconfig = "light_programmer.genconfig:main"
light-programmer-mcp = "light_programmer.mcp_server:main"
